--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <div class="main-div">
            <img class="upper-cloud" src="cloud.png">
             <h1>Miland sharma</h1>
-            <h3>Robotic Enginner</h3>
+            <h3>Robotic Engineer</h3>
            <img class="lower-cloud" src="cloud.png">
            <img class="mountain" src="mountain.png">
         </div>
